--- a/style.css
+++ b/style.css
@@ -1,4 +1,50 @@
+body{
+   background-color:hsl(212, 45%, 89%);
+}
 
- .attribution { font-size: 11px;
-    text-align: center; 
-   }.attribution a { color: hsl(228, 45%, 44%); }
+.flexible_container{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 100vh;
+}
+
+   .container{
+      background-color: white;
+      border-radius: 10px;
+      height: 500px;
+      width: 300px;
+      display: grid;
+      grid-template-rows: 1fr 1fr 1fr;
+      grid-template-columns: 1fr;
+      gap: 20px;
+      margin: auto;
+      padding: 20px;
+   }
+
+   .container img{
+      border-radius: 10px;
+      grid-row: 1;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      justify-self: center;
+   }
+   .container h2{
+      align-items: center;
+      grid-row: 2;
+      font-size: 24px;
+      font-weight: bold;
+      text-align: center;
+   }
+   .container p{
+      grid-row: 3;
+      font-size: 19px;
+      color: #666;
+      text-align: center;
+   }
+
+
+   .attribution { font-size: 11px;
+      text-align: center; 
+     }.attribution a { color: hsl(228, 45%, 44%); }
