--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
+*{
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+}
+
 body{
    background-color:hsl(212, 45%, 89%);
+   font-family: "Outfit", serif;
+   font-weight: 400;
 }
 
 .flexible_container{
@@ -20,6 +28,7 @@ body{
       gap: 20px;
       margin: auto;
       padding: 20px;
+      max-width: 500px;
    }
 
    .container img{
@@ -29,8 +38,10 @@ body{
       height: 100%;
       object-fit: cover;
       justify-self: center;
+      max-height:100% ;
    }
    .container h2{
+      font-weight: 700;
       align-items: center;
       grid-row: 2;
       font-size: 24px;
@@ -38,13 +49,62 @@ body{
       text-align: center;
    }
    .container p{
+      margin-bottom: 20px;
+      margin: 20px;
       grid-row: 3;
-      font-size: 19px;
+      font-size: 15px;
       color: #666;
       text-align: center;
    }
 
 
-   .attribution { font-size: 11px;
+   .attribution {
+       font-size: 11px;
       text-align: center; 
-     }.attribution a { color: hsl(228, 45%, 44%); }
+      padding-top: 20px;
+      margin-top: 20px;
+     }
+     .attribution a { 
+      color: hsl(228, 45%, 44%); 
+   }
+
+   /* -------------(>375px)-------------------- */
+   @media only screen and (min-width:376px) and (max-width:766px) {
+      .flexible_container{
+         font-size: 19px;
+         display: flex;
+         align-items: center;
+         max-width: 80vw;
+      }
+   }
+
+
+   @media only screen and (min-width:768px) and (max-width:893px){
+      body{
+         font-weight: 500;
+      }
+
+      .flexible_container{
+            display: flex;
+            align-items: center;
+            /* width: 80%; */
+            margin: 0 auto;
+      }
+      .attribution{
+         text-align: center;
+      }
+   }
+
+   @media only screen and (min-width:894px) and (max-width:1160px){
+      body{
+         font-weight: 600;
+         font-size: 28px;
+      }
+      .flexible_container{
+         width: 100%;
+      }
+      .container{
+         font-size: 20px;
+         gap: 30px;
+      }
+   }
