--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
    background-color:hsl(212, 45%, 89%);
    font-family: "Outfit", serif;
    font-weight: 400;
+   font-size: 15px;
 }
 
 .flexible_container{
@@ -18,6 +19,7 @@ body{
 }
 
    .container{
+      box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
       background-color: white;
       border-radius: 10px;
       height: 500px;
@@ -38,13 +40,12 @@ body{
       height: 100%;
       object-fit: cover;
       justify-self: center;
-      max-height:100% ;
    }
    .container h2{
       font-weight: 700;
       align-items: center;
       grid-row: 2;
-      font-size: 24px;
+      /* font-size: 24px; */
       font-weight: bold;
       text-align: center;
    }
@@ -52,7 +53,7 @@ body{
       margin-bottom: 20px;
       margin: 20px;
       grid-row: 3;
-      font-size: 15px;
+      /* font-size: 15px; */
       color: #666;
       text-align: center;
    }
@@ -72,6 +73,7 @@ body{
    @media only screen and (min-width:376px) and (max-width:766px) {
       .flexible_container{
          font-size: 19px;
+         width: 80vw;
          display: flex;
          align-items: center;
          max-width: 80vw;
